iter/04: governance and regime catalog doc
- API-FREEZE: iter 4 surface (Regime trait, RegimeRegistry,
  SteadyStateRegime on both sides).
- ITERATION-LOG: iter 4 entry, in-flight decisions (positional+kv
  encoding, no-Jackson, default fallback for `make demo`, ISO formatter
  collapse, Box<dyn Regime> sans Debug), bilan with iter 5 handoff.
- CHANGELOG: regime trait/registry, SteadyStateRegime (Java + Rust),
  parameter enums.
- doc/user/regimes.md: regime catalog skeleton with R1 documented
  (parameters, defaults, expected signature, phenomena), TODO links
  to R2-R7 with iteration anchors.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>